style.css
.hero-image {
    background-image: url("./images/background.jpg");
    height: 20%;
    width: 100%;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    position: relative;
    padding: 30%;
}
.hero-text {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    text-align: center;
    font-family: ink free;
    font-size: 60pt;

}

.name {
    color: teal;
    font-weight: bolder;
    font-family: ink free;
}

nav {
    display: flex;
    background-color: teal;
    color: #13293d;
    padding: 10px;
    text-decoration: none;
    float: inline-start;
    
  }

 li {
     display: inline-block;
     margin: 25px;
     font-size: 20pt;
     font-family: ink free;
   
 }

 a {
     color: white;
     text-decoration: none;
 }


.Me {
    flex: 1 0 0;
    vertical-align: baseline;
    max-height: 400px;
    float: right;
    margin-right: 50px;
    border-radius: 10px;
    float: left;

}

main {
    display: block;
    margin-bottom: 30px;
    padding: 50px;
    height: 500px;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
}

section {
    display: block;
    background: linear-gradient(rgba(0, 128, 128, 0.548),rgba(1, 61, 61, 0.644));
    margin-bottom: 30px;
    padding: 50px;
    height: 500px;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
}

div {
    display: inline-block;
}

.card {
 flex: 1 0 0;
 margin-right: 70px;
 padding: 5px;
 border-width: 5px;
 height: 300px;
 width: 50%;
}

.title {
    display: block;
    text-align: center;
    text-decoration: underline;
    font-size: 40px;
    font-family: ink free;
    color: #232425;
    padding: 10px;
    
}

footer {
    text-align: center;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    font-size: 20px;
    margin-bottom: 30px;

}

li a:hover{
    cursor: pointer;
    text-transform: uppercase;
    border-radius: 50px;
    padding: 20px;
    background-color: rgba(7, 44, 44, 0.616);
    transition: all 0.1s ease-in-out;
}

nav a:hover {
    color: rgba(255, 255, 255, 1);
    box-shadow: 0 5px 15px rgba(255, 255, 255, 0.4);
}

.card:hover {
    box-shadow: 0 5px 15px rgba(255, 255, 255, 0.4);
    transform: scale(1.5);
}

